BSB/force-app/main/default/objects/Agglomeration__c/Agglomeration__c.object-meta.xml
<CustomObject>
    <label>Référentiel Commune</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Référentiel Communes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>