BSB/force-app/main/default/objects/Agglomeration__c/fields/Agglomeration__c.field-meta.xml
<CustomField>
    <fullName>Agglomeration__c</fullName>
    <label>Agglomération</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agglomerations</valueSetName>
    </valueSet>
</CustomField>