BSB/force-app/main/default/objects/Agglomeration__c/fields/Agglomeration_Key__c.field-meta.xml
<CustomField>
    <fullName>Agglomeration_Key__c</fullName>
    <externalId>true</externalId>
    <label>Agglomeration_Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>