BSB/force-app/main/default/objects/Agglomeration__c/fields/Code_INSEE__c.field-meta.xml
<CustomField>
    <fullName>Code_INSEE__c</fullName>
    <label>Code INSEE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>