BSB/force-app/main/default/objects/Agglomeration__c/fields/Code_Postal__c.field-meta.xml
<CustomField>
    <fullName>Code_Postal__c</fullName>
    <label>Code Postal</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>