BSB/force-app/main/default/objects/Agglomeration__c/fields/Commune__c.field-meta.xml
<CustomField>
    <fullName>Commune__c</fullName>
    <label>Commune</label>
    <length>255</length>
    <type>Text</type>
</CustomField>