BSB/force-app/main/default/objects/Agglomeration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Commune__c</columns>
    <columns>Code_Postal__c</columns>
    <columns>Agglomeration__c</columns>
    <columns>Code_INSEE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_Postal__c</field>
        <operation>equals</operation>
        <value>29410</value>
    </filters>
    <label>All</label>
</ListView>